--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is a basic react tutorial",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -17,6 +16,11 @@
   },
   "homepage": "https://github.com/sarthak19360/namaste-react#readme",
   "devDependencies": {
-    "parcel": "^2.10.3"
+    "parcel": "^2.10.3",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
