--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "tailwindcss": "^3.4.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1"
   }
 }
